- Fixed bug #53515 (property_exists incorrect on ArrayObject null and 0 values)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@306213 c90b9560-bf6c-de11-be94-00142212c4b1